--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npx vite",
-    "build": "npx vite build",
-    "preview": "npx vite preview",
-    "start": "npx vite"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "node_modules/.bin/vite"
   },
   "dependencies": {
     "react": "^19.0.0",
